--- a/frontend/src/Home/style.scss
+++ b/frontend/src/Home/style.scss
@@ -1,11 +1,40 @@
 .home{
+    position: absolute;
     border: 1px solid black;
     width: 1200px;
     margin: auto;
-    height: 550px;
+    padding: 1px;
     &__firstChild{
-        border: 1px solid black;
         width: 100%;
         height: 91.666px;
+        display: flex;
+
+        div{
+            width: 10%;
+            height: 100%;
+            border: 1px solid red;
+        }
+    }
+    &__midChild{
+        width: 100%;
+        display: flex;
+        height: 366.64px;
+        border: 1px solid yellow;
+        &__left{
+            width: 10%;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            div{
+                width: 100%;
+                height: 25%;
+                border: 1px solid red;
+            }
+        }
+        &__mid{
+            width: 80%;
+            height: 100%;
+            border: 1px solid red;
+        }
     }
 }
