--- a/frontend/src/Home/style.scss
+++ b/frontend/src/Home/style.scss
@@ -2,24 +2,26 @@
     position: absolute;
     border: 1px solid black;
     width: 1200px;
+    height: 560px;
     margin: auto;
     padding: 1px;
     &__firstChild{
         width: 100%;
         height: 91.666px;
         display: flex;
-
+        padding: 1px;
+        gap: 2px;
         div{
             width: 10%;
             height: 100%;
-            border: 1px solid red;
+            padding: 3px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
         }
     }
     &__midChild{
         width: 100%;
         display: flex;
         height: 366.64px;
-        border: 1px solid yellow;
         &__left{
             width: 10%;
             display: flex;
@@ -28,13 +30,26 @@
             div{
                 width: 100%;
                 height: 25%;
-                border: 1px solid red;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
             }
         }
         &__mid{
             width: 80%;
             height: 100%;
             border: 1px solid red;
+        }
+    }
+    &__lastChild{
+        width: 100%;
+        height: 91.666px;
+        display: flex;
+
+        div{
+            width: 10%;
+            height: 100%;
+             padding: 3px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
         }
     }
 }
